@@ -1576,6 +1576,16 @@ public class AsciiDocLexerTest extends LexerTestCase {
         "AsciiDoc:TEXT ('description')");
   }
 
+  public void testDescriptionWithFormatting() {
+    doTest("`property`:: description",
+      "AsciiDoc:MONO_START ('`')\n" +
+        "AsciiDoc:DESCRIPTION ('property')\n" +
+        "AsciiDoc:MONO_END ('`')\n" +
+        "AsciiDoc:DESCRIPTION ('::')\n" +
+        "AsciiDoc:WHITE_SPACE (' ')\n" +
+        "AsciiDoc:TEXT ('description')");
+  }
+
   public void testDescriptionWithLink() {
     doTest("link:http://www.example.com[Example]:: description",
       "AsciiDoc:LINKSTART ('link:')\n" +
