@@ -11,6 +11,7 @@ This document provides a high-level view of the changes introduced by release.
 
 - find-references shows also all declaration of attributes with the same name
 - search-everywhere also finds attribute declarations
+- fix monospace formatting in description lists
 
 === 0.30.50 (preview, available from GitHub releases)
 
